<?xml version="1.0" encoding="utf-8"?>
<resources>


    //New Data


    <string name="not_getting_location">Not getting your location.</string>
    <string name="message_getlocation">Please Enter ok Button.</string>
    <string name="enter_vehicleno">Please Enter Vehicle No.</string>
    <string name="valid_km">Please Enter Valid Km No.</string>
    <string name="valid_driverno">Please Enter Valid Driver No.</string>
    <string name="valid_drivername">Please Enter Driver Name.</string>
    <string name="valid_image">Please Upload Image.</string>
    <string name="complte_journey">Complete your journey</string>
    <string name="punchout">Your punch out of</string>
    <string name="language">Select Language</string>
    <string name="language_install">Install Truxapp Pilot App into your \n own Languages</string>
    <string name="punchout_pending">is pending. Please click on logout button for punch out.</string>
    <string name="warning">WARNING</string>
    <string name="lastclosing_km">Last Closing KM:</string>
    <string name="driver_mobno">Driver Mobile No</string>
    <string name="driver_photo">Driver Photo</string>
    <string name="upload">UPLOAD</string>
    <string name="current_inputkm">Current Input KM</string>
    <string name="button_startjourney"> START \n JOURNEY </string>
    <string name="button_scan"> SCAN \n POCKET/ \n BOX </string>
    <string name="button_resume"> RESUME \n JOURNEY </string>
    <string name="error_difference">\nPlease Enter Valid KM.</string>
    <string name="button_attendance">  Attendance   \n Report </string>
    <string name="button_trip">  Trip  \n  Report </string>
    <string name="pilot_login">Pilot Login</string>
    <string name="vehcle_no">Vehicle No.</string>
    <string name="button_delivery"> START \n DELIVERY </string>
    <string name="button_stopjrny"> STOP \n JOURNEY </string>
    <string name="driver_name">Driver Name</string>
    <string name="choose_lang">Choose Your Preferred</string>
    <string name="choose_lang1">Languages</string>
    <string name="warning1">Fine of Rs. 1000 if you watch online videos \n on this phone. We track all activities on this phone.</string>
    <string name="driver_details">* Driver does not exit in the system. Please provide following details.</string>


    <string name="no_pod_found">No POD Found</string>
    <string name="no_sig_found">No Signature Found</string>


    <string name="upload_doc">Upload Document</string>
    <string name="signature_img">Signature Image</string>
    <string name="drop_pod">Drop POD</string>

    <string name="menu_available">Available Order</string>


    <string name="accept_button">Accept</string>
    <string name="source">Source</string>
    <string name="destination_new">Destination</string>
    <string name="ti_name">TI Name</string>
    <string name="ti_no">TI Number</string>
    <string name="order_date">Order Date</string>
    <string name="order_id">Order ID</string>
    <string name="order_addrs">Branch Address:</string>







    //New Data


    <string name="app_name">Trux Pilot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_internet">Please check your internet connection or try again later!</string>
    <string name="error_service">Unable to get response from server.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login">Login</string>
    <string name="stop_journey">Stop  Journey</string>
    <string name="no_data">No data available.</string>
    <string name="enable_internet">Enable internet to continue.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="resume_delivery">Resume Journey</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>


    <string name="confimation_">Confirmation!</string>
    <string name="are_you_sure_you_want_to">Are you sure you want to</string>
    <string name="uploading_failed">Uploading Failed</string>
    <string name="image_uploading_failed">Image Uploading Failed</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="enter_number_of_boxes">Enter number of boxes</string>
    <string name="enter_temperature">Enter Current Temperature</string>


    <string name="delivery_status">Delivery Status</string>
    <string name="please_provide_delivery_status">Please provide delivery status</string>
    <string name="awb_no">AWB No:</string>
    <string name="scan_pocket">Scan Packet/Box</string>
    <string name="input_start_km">Input start kilometer</string>
    <string name="calling_permission">Calling permission for Customer Care</string>
    <string name="camera_permission">Camera permission for Profile Image</string>
    <string name="storage_permission">Storage permission for profile image</string>
    <string name="gps_permission">GPS permission for location</string>
    <string name="grant_access">You need to grant access to </string>

    <string name="error_timeOut">Your network is too slow please try again later</string>
    <string name="error_NoConnectionError">Please check your internet connection.</string>
    <string name="error_AuthFailureError">No auth code found</string>
    <string name="error_ServerError">Server not responding please try again later</string>
    <string name="menu_home">Home</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_language">Change Language</string>
    <string name="are_you_sure_you_want_to_change_language">Are you sure you want to change language?</string>
    <string name="enter_awb_number">Enter AWB Number</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="trip_report">Trip Report</string>
    <string name="select_month">Select Month <font color='#FC0000'>*</font></string>
    <string name="select_date">Select Date <font color='#FC0000'>*</font></string>
    <string name="select_trip">Select Trip <font color='#FC0000'>*</font></string>
    <string name="total_present_day">Total attendance in month</string>
    <string name="click_to_view"><u>click to view</u></string>
    <string name="trip_id">Trip Id: </string>
    <string name="total_km_run">Total KM Run: </string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="drop_detail">Drop Detail</string>
    <string name="document">Document</string>
    <string name="trip_sheet">Trip Sheet</string>
    <string name="error_date">\nSelect valid date</string>
    <string name="change_select_trip_date">Change Date</string>
    <string name="destination">Destination:</string>
    <string name="no_of_box">No. Of Boxes:</string>
    <string name="your_selected_item"><font color='#FC0000'>Your Selected document is</font></string>
    <string name="select_document"><font color='#FC0000'>Select Document</font></string>
    <string name="no_document_found">No Document Found</string>
    <string name="no_detail_found">No Detail Found</string>

    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string-array name="languages">
        <item>English</item>
        <item>Arabic (‎العربية‎)</item>
        <item>Hindi (हिंदी)</item>
        <item>Marathi (मराठी)</item>
        <item>Tamil (தமிழ்)</item>
        <item>Telugu (తెలుగు)</item>
    </string-array>


    <string-array name="ndr_responce_new">
        <item>Select Option</item>
        <item>Delivery Successful</item>
        <item>A00 - Attempted Delivery - Partner</item>
        <item>A01 - Residential - No one home/re-schedule</item>
        <item>A02 - Business - Office closed/re-schedule</item>
        <item>A03 - Business - Cnee not available/re-schedule</item>
        <item>A04 - Incorrect address - Cnee moved/re-schedule</item>
        <item>A05 - Incorrect address - Incomplete/re-schedule</item>
        <item>A06 - No access/re-schedule</item>
        <item>A07 - Delivery time restricted/re-schedule</item>
        <item>A08 - Monies due not ready/re-schedule</item>
        <item>A09 - Unable to unload/re-schedule</item>
        <item>A10 - Driver out of time/re-schedule</item>
        <item>A11 - Incorrect sorting/re-schedule</item>
        <item>A12 - Non controllable delay/re-schedule</item>
        <item>A13 - Residential - No one home/unable to contact</item>
        <item>A14 - Business - Office closed/unable to contact</item>
        <item>A15 - Incorrect address - Cnee moved/no fwding address</item>
        <item>A16 - Incorrect address - Address not found</item>
        <item>A17 - Refused - Due Damage</item>
        <item>A18 - Refused - Due Monies </item>
        <item>A19 - Refused - Due Other</item>
    </string-array>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->


    <!-- Strings related to login -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
