<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_home"
            android:checked="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/available_order"
            android:icon="@mipmap/ic_available_order"
            android:checked="true"
            android:title="@string/menu_available" />
        <item
            android:id="@+id/reports"
            android:icon="@mipmap/ic_report"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/language"
            android:icon="@mipmap/ic_change_language"
            android:title="@string/menu_language" />
        <item
            android:id="@+id/logout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/menu_logout" />
    </group>



</menu>
